--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,8 @@ name: CI
 
 on:
   push:
+    branches:
+      - main
   pull_request:
 
 concurrency:
@@ -25,4 +27,3 @@ jobs:
         run: cargo fmt --all -- --check
       - name: test
         run: cargo test --locked
-
