Add tests and coverage CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
@@ -26,4 +26,34 @@ jobs:
       - name: fmt
         run: cargo fmt --all -- --check
       - name: test
-        run: cargo test --locked
+        run: cargo test --workspace --locked
+
+  dialects:
+    name: dialect smoke (${{ matrix.dialect }})
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        dialect: [postgres, mysql, sqlite]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - name: test
+        run: cargo test -p sql_optimizer --locked dialect_${{ matrix.dialect }}
+
+  coverage:
+    name: coverage (tarpaulin)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt
+      - name: install tarpaulin
+        run: cargo install cargo-tarpaulin --version 0.35.1 --locked
+      - name: coverage
+        run: cargo tarpaulin -p sql_optimizer --locked --out Html --output-dir tarpaulin-report
+      - uses: actions/upload-artifact@v4
+        with:
+          name: tarpaulin-report
+          path: tarpaulin-report/
