--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
       - name: install tarpaulin
         run: cargo install cargo-tarpaulin --version 0.35.1 --locked
       - name: coverage
-        run: cargo tarpaulin -p sql_optimizer --locked --out Html --output-dir tarpaulin-report
+        run: cargo tarpaulin -p sql_optimizer --locked --out Html --output-dir tarpaulin-report --fail-under 80
       - uses: actions/upload-artifact@v4
         with:
           name: tarpaulin-report
