Add comparison table and CI benchmark
Run index_suggestion bench in CI and document a rough feature comparison.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,26 @@ jobs:
       - name: test
         run: cargo test -p sql_optimizer --locked collect_index_candidates_from_multiple_dialects
 
+  bench-index-suggestion:
+    name: bench (index_suggestion, 1_000_000)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - name: run bench
+        shell: bash
+        run: |
+          set -o pipefail
+          mkdir -p bench-output
+          cargo bench -p sql_optimizer --locked --bench index_suggestion -- 1_000_000 | tee bench-output/index_suggestion.txt
+      - name: upload bench output
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: index-suggestion-bench
+          path: bench-output/index_suggestion.txt
+          if-no-files-found: warn
+
   coverage:
     name: coverage (tarpaulin)
     runs-on: ubuntu-latest
