--- a/crates/sqlopt/Cargo.toml
+++ b/crates/sqlopt/Cargo.toml
@@ -10,4 +10,4 @@ readme = "../../README.md"
 [dependencies]
 anyhow = "1.0.100"
 clap = { version = "4.5.54", features = ["derive"] }
-sql_optimizer = { version = "0.1.0", path = "../sql_optimizer" }
+sql_optimizer = { workspace = true }
